crates/pg_syntax/tests/snapshots/postgres_regress/date@87.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT date '99-08-Jan';"
---
SelectStmt@0..24
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..24
    Ident@7..11 "date"
    Whitespace@11..12 " "
    TypeCast@12..24
      AConst@12..23
        Sconst@12..23 "'99-08-Jan'"
      Ascii59@23..24 ";"

