crates/pg_syntax/tests/snapshots/postgres_regress/dbsize@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_size_bytes('1 AB A    ');"
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..33
    FuncCall@7..33
      Ident@7..20 "pg_size_bytes"
      Ascii40@20..21 "("
      AConst@21..33
        Sconst@21..33 "'1 AB A    '"
  Ascii41@33..34 ")"
  Ascii59@34..35 ";"

